--- a/data/blog/what-is-playwright.mdx
+++ b/data/blog/what-is-playwright.mdx
@@ -152,6 +152,6 @@ Playwright is created by Microsoft. It has Apache License 2.0.
 
 # Videos
 
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Xz6lhEzgI5I" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
 
 ---
