updated blog post

--- a/data/blog/what-is-playwright.mdx
+++ b/data/blog/what-is-playwright.mdx
@@ -154,4 +154,8 @@ Playwright is created by Microsoft. It has Apache License 2.0.
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Xz6lhEzgI5I" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LM4yqrOzmFE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tJF7UhA59Gc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+
 ---
