--- a/data/blog/what-is-playwright.mdx
+++ b/data/blog/what-is-playwright.mdx
@@ -1,7 +1,7 @@
 ---
 title: What is Playwright
 date: '2023-01-20'
-tags: ['playwright', 'testing']
+tags: ['playwright', 'testing', 'javascript', 'typescript']
 draft: false
 summary: Playwright is a testing framework that lets you automate Chromium, Firefox, and WebKit with a single API. You can use it to write End-to-End (E2E) and Integration tests across all platforms. Test on Windows, Linux, and macOS.
 layout: PostLayout
